--- a/PLATFORM/VirtoCommerce.Platform.Data/packages.config
+++ b/PLATFORM/VirtoCommerce.Platform.Data/packages.config
@@ -18,6 +18,8 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="3.0.1.0" targetFramework="net451" />
