--- a/PLATFORM/VirtoCommerce.Platform.Web/packages.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/packages.config
@@ -48,6 +48,8 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="selectize" version="0.9.0" targetFramework="net451" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="underscore.js" version="1.8.2" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
