--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Notification\SearchNotificationCriteria.cs" />
     <Compile Include="Notification\SearchNotificatiosnResult.cs" />
     <Compile Include="Notification\SendNotificationResult.cs" />
+    <Compile Include="Notification\SmsNotification.cs" />
     <Compile Include="Packaging\ModuleIdentity.cs" />
     <Compile Include="Packaging\IPackageService.cs" />
     <Compile Include="Packaging\ModuleDescriptor.cs" />
